# space_freighter

./: .gitignore  CMakeLists.txt  README.md
include/SOIL/src/: stb_image_aug.c
include/core_engine/: core_utils.h  gameobject.h  gui_constants.h  gui_exceptions.h  gui_objects.h  input_handler.h  sprite.h  transform.h
include/gamemanager/: world_go.h
include/graphics/: camera.h  core_utils.h  custom_graphics_exceptions.h  display.h  mesh.h  shader.h  text_renderer.h  texture.h
include/simulation/: SimConstants.h  custom_exceptions.h  custom_sim_exceptions.h  generator.h  mainsim.h  simutils.h  solarsystem.h  universe.h  world.h
lib/SOIL/: CMakeLists.txt
lib/freetype-2.9/src/tools/: no-copyright
res/: basicShader.fs  basicShader.vs  gui_shader.fs  textShader.fs
res/shaders/: gui_bound_shader.fs  gui_shader.fs  gui_shader.vs
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/core_engine/: CMakeLists.txt  Makefile  cmake_install.cmake  core_utils.cpp  gameobject.cpp  gui_objects.cpp  input_handler.cpp  sprite.cpp
src/gamemanager/: CMakeLists.txt  graphicalsim_main.cpp  world_go.cpp
src/graphics/: CMakeLists.txt  Makefile  camera.cpp  cmake_install.cmake  display.cpp  mesh.cpp  shader.cpp  stb_image.c  text_renderer.cpp  texture.cpp
src/simulation/: .universe.cpp.swp  CMakeLists.txt  generator.cpp  main.cpp  mainsim.cpp  simutils.cpp  solarsystem.cpp  universe.cpp  world.cpp
todo_notes/: GENERAL.txt  GUI-UI.txt
tools/: log.txt  planet_name_scraper.py  planet_names.txt  planet_names_nodup.txt  planetname_removedup.py  runamok.sh
tools/testing_cpp/: a.out  data_ranges.cpp  randomuniqueintegers.cpp
